Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Du khách thích thú trải nghiệm làng nghề truyền thống giữa lòng Đà Nẵng",
+    "content": "Triển lãm \"Đà Nẵng - Xưa và Nay\" diễn ra từ 22 đến 30-3 tại Đà Nẵng đã thu hút nhiều du khách và người dân tham gia trải nghiệm các nghề thủ công truyền thống. Du khách có cơ hội tự tay làm bánh tráng Túy Loan và dệt chiếu Cẩm Nê, những làng nghề nổi tiếng tại Đà Nẵng. Sự kiện không chỉ giới thiệu các sản phẩm truyền thống mà còn tái hiện lịch sử và văn hóa của thành phố qua các bức ảnh và tư liệu.",
+    "link": "https://tuoitre.vn/du-khach-thich-thu-trai-nghiem-lang-nghe-truyen-thong-giua-long-da-nang-20250322192841191.htm",
+    "cat": "du-lich",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Triển lãm nào diễn ra tại Đà Nẵng để giới thiệu nghề truyền thống?",
+    "answers": [
+      {
+        "text": "Đà Nẵng - Xưa và Nay",
+        "correct": true
+      },
+      {
+        "text": "Những nghề truyền thống khác",
+        "correct": false
+      },
+      {
+        "text": "Hội chợ ẩm thực Đà Nẵng",
+        "correct": false
+      },
+      {
+        "text": "Triển lãm nghệ thuật hiện đại",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hơn một nửa CLB Ngoại hạng Anh có thể dự Cup châu Âu",
     "content": "Giải Ngoại hạng Anh có thể có hơn một nửa các câu lạc bộ tham dự các giải đấu châu Âu mùa tới, với 11 trong tổng số 20 đội đủ điều kiện. Hiện tại, năm đội Anh đã vào đến tứ kết các giải châu Âu. Nếu các đội này giành chiến thắng ở các giải đấu của mình, họ sẽ tự động có suất tham dự Cup châu Âu bất kể vị trí trong giải quốc nội. Tuy nhiên, kịch bản này có khả năng xảy ra không cao do nhiều yếu tố trong các trận đấu sắp tới.",
     "link": "https://vnexpress.net/hon-mot-nua-clb-ngoai-hang-anh-co-the-du-cup-chau-au-4864483.html",
@@ -2597,33 +2624,6 @@
     ]
   },
   {
-    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
-    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
-    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 5,
-    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
-    "answers": [
-      {
-        "text": "Các số đảo ngược kết quả phép cộng",
-        "correct": true
-      },
-      {
-        "text": "Kết quả là tổng các số bên trái",
-        "correct": false
-      },
-      {
-        "text": "Kết quả là số lớn nhất trong dãy",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần cộng các số lại với nhau",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đặt stent sau bao lâu thì ổn định?",
     "content": "Sau khi đặt stent mạch vành, bệnh nhân thường cần nằm viện từ 2-3 ngày để theo dõi sức khỏe. Thời gian hồi phục có thể khoảng một tuần đối với trường hợp không khẩn cấp, nhưng nếu cần đặt stent ngay lập tức do nhồi máu cơ tim, có thể mất vài tuần đến hơn một tháng để bình phục hoàn toàn. Bệnh nhân cần tuân thủ chế độ dinh dưỡng và tránh hoạt động nặng để hồi phục nhanh chóng.",
     "link": "https://vnexpress.net/dat-stent-sau-bao-lau-thi-on-dinh-4864401.html",
@@ -2650,6 +2650,33 @@
       },
       {
         "text": "3 tháng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
+    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
+    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 5,
+    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
+    "answers": [
+      {
+        "text": "Các số đảo ngược kết quả phép cộng",
+        "correct": true
+      },
+      {
+        "text": "Kết quả là tổng các số bên trái",
+        "correct": false
+      },
+      {
+        "text": "Kết quả là số lớn nhất trong dãy",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần cộng các số lại với nhau",
         "correct": false
       }
     ]
@@ -3795,33 +3822,6 @@
     ]
   },
   {
-    "title": "Cơn ác mộng khi uống những liều thuốc trầm cảm đầu tiên",
-    "content": "Sau khi uống thuốc chống trầm cảm lần đầu, Nam, 34 tuổi, trải qua cảm giác khó thở và lo lắng cực độ, nghi ngờ về sự an toàn của thuốc. Tình trạng này không phải là cá biệt, nhiều bệnh nhân khác cũng gặp phải triệu chứng tương tự, dẫn đến việc tự ý ngừng thuốc. Theo các chuyên gia, hội chứng serotonin có thể xảy ra ở những người nhạy cảm, và việc không kiên nhẫn trong điều trị có thể làm tình trạng bệnh trở nên nghiêm trọng hơn. Để điều trị hiệu quả, bệnh nhân cần tuân thủ hướng dẫn của bác sĩ và hiểu rõ các triệu chứng có thể xảy ra.",
-    "link": "https://vnexpress.net/con-ac-mong-khi-uong-nhung-lieu-thuoc-tram-cam-dau-tien-4863109.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Tại sao nhiều bệnh nhân trầm cảm lại ngừng uống thuốc sau liều đầu tiên?",
-    "answers": [
-      {
-        "text": "Vì họ gặp phải tác dụng phụ đáng sợ.",
-        "correct": true
-      },
-      {
-        "text": "Vì thuốc không có tác dụng ngay lập tức.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ không muốn điều trị nữa.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ không có tiền để tiếp tục dùng thuốc.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Malaysia bổ sung 3 cầu thủ nhập tịch",
     "content": "Malaysia đã bổ sung ba cầu thủ nhập tịch vào đội tuyển bóng đá quốc gia nhằm chuẩn bị cho vòng loại cuối Asian Cup 2027. Ba cầu thủ này bao gồm tiền vệ Hector Hevel, hậu vệ Gabriel Palmero và thủ môn Christian Abad Amat, tất cả đều có nguồn gốc từ Tây Ban Nha. HLV Peter Cklamovski cho biết sự bổ sung này sẽ nâng cao sức cạnh tranh trong đội hình và góp phần cải thiện phong độ chung của đội tuyển.",
     "link": "https://vnexpress.net/malaysia-bo-sung-3-cau-thu-nhap-tich-4864311.html",
@@ -3871,6 +3871,33 @@
       },
       {
         "text": "Tổ chức hội thảo về sức khỏe",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cơn ác mộng khi uống những liều thuốc trầm cảm đầu tiên",
+    "content": "Sau khi uống thuốc chống trầm cảm lần đầu, Nam, 34 tuổi, trải qua cảm giác khó thở và lo lắng cực độ, nghi ngờ về sự an toàn của thuốc. Tình trạng này không phải là cá biệt, nhiều bệnh nhân khác cũng gặp phải triệu chứng tương tự, dẫn đến việc tự ý ngừng thuốc. Theo các chuyên gia, hội chứng serotonin có thể xảy ra ở những người nhạy cảm, và việc không kiên nhẫn trong điều trị có thể làm tình trạng bệnh trở nên nghiêm trọng hơn. Để điều trị hiệu quả, bệnh nhân cần tuân thủ hướng dẫn của bác sĩ và hiểu rõ các triệu chứng có thể xảy ra.",
+    "link": "https://vnexpress.net/con-ac-mong-khi-uong-nhung-lieu-thuoc-tram-cam-dau-tien-4863109.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao nhiều bệnh nhân trầm cảm lại ngừng uống thuốc sau liều đầu tiên?",
+    "answers": [
+      {
+        "text": "Vì họ gặp phải tác dụng phụ đáng sợ.",
+        "correct": true
+      },
+      {
+        "text": "Vì thuốc không có tác dụng ngay lập tức.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ không muốn điều trị nữa.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ không có tiền để tiếp tục dùng thuốc.",
         "correct": false
       }
     ]
@@ -4397,122 +4424,6 @@
       },
       {
         "text": "Vì lái xe quá tốc độ",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Nha khoa Nhân tâm khai trương chi nhánh quận 7",
-    "content": "Nha khoa Nhân Tâm đã chính thức khai trương chi nhánh mới tại quận 7, TP HCM vào ngày 22/3/2025. Chi nhánh này được trang bị công nghệ hiện đại như hệ thống chụp CT Cone Beam 3D và kỹ thuật số trong chẩn đoán và điều trị. Nhân Tâm cũng triển khai nhiều ưu đãi hấp dẫn cho khách hàng trong dịp khai trương, bao gồm cơ hội trúng thưởng và quà tặng khi sử dụng dịch vụ.",
-    "link": "https://vnexpress.net/nha-khoa-nhan-tam-khai-truong-chi-nhanh-quan-7-4864246.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Nha khoa Nhân Tâm vừa khai trương chi nhánh ở đâu?",
-    "answers": [
-      {
-        "text": "Quận 7, TP HCM",
-        "correct": true
-      },
-      {
-        "text": "Quận 10, TP HCM",
-        "correct": false
-      },
-      {
-        "text": "Quận 1, TP HCM",
-        "correct": false
-      },
-      {
-        "text": "Quận 3, TP HCM",
-        "correct": false
-      },
-      {
-        "text": "Quận 5, TP HCM",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Nguyên nhân chất lượng phôi kém khi thụ tinh ống nghiệm",
-    "content": "Chất lượng phôi trong thụ tinh ống nghiệm bị ảnh hưởng bởi nhiều yếu tố như chất lượng trứng và tinh trùng, môi trường nuôi cấy và công nghệ. Phôi kém chất lượng thường có hình thái bất thường và tốc độ phát triển chậm, dẫn đến tỷ lệ làm tổ thấp. Đặc biệt, độ tuổi của người phụ nữ có thể gây suy giảm chất lượng trứng, cùng với các yếu tố môi trường và lối sống cũng tác động đến chất lượng phôi.",
-    "link": "https://vnexpress.net/nguyen-nhan-chat-luong-phoi-kem-khi-thu-tinh-ong-nghiem-4864319.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Nguyên nhân nào gây chất lượng phôi kém trong thụ tinh ống nghiệm?",
-    "answers": [
-      {
-        "text": "Độ tuổi phụ nữ tăng cao",
-        "correct": true
-      },
-      {
-        "text": "Chế độ dinh dưỡng tốt",
-        "correct": false
-      },
-      {
-        "text": "Môi trường sống sạch sẽ",
-        "correct": false
-      },
-      {
-        "text": "Số lượng tinh trùng nhiều",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ngày mai diễn ra Ngày hội sáng tạo VF 3",
-    "content": "Ngày 22/3, VinFast sẽ tổ chức sự kiện \"Ngày hội sáng tạo VF 3\" tại ba địa điểm: Hà Nội, Quảng Nam và TP HCM. Sự kiện này nhằm trao giải cho các thiết kế xe sáng tạo, với gần 500 bài dự thi và tổng giá trị giải thưởng lên đến 650 triệu đồng. Ban giám khảo bao gồm nhiều chuyên gia và nghệ sĩ, sẽ lựa chọn các mẫu xe đại diện cho từng miền và trao các giải thưởng khác nhau cho những thiết kế xuất sắc.",
-    "link": "https://vnexpress.net/ngay-mai-dien-ra-ngay-hoi-sang-tao-vf-3-4864359.html",
-    "cat": "kinh-doanh",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Ngày hội sáng tạo VF 3 sẽ diễn ra vào ngày nào và ở đâu?",
-    "answers": [
-      {
-        "text": "Ngày 22/3 tại Hà Nội, Quảng Nam và TP HCM",
-        "correct": true
-      },
-      {
-        "text": "Ngày 21/3 tại Hà Nội và TP HCM",
-        "correct": false
-      },
-      {
-        "text": "Ngày 22/3 tại Hà Nội và Đà Nẵng",
-        "correct": false
-      },
-      {
-        "text": "Ngày 23/3 tại TP HCM và Quảng Nam",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Thâu tóm dự án 1.000 tỉ, Hậu 'Pháo' sang tay hưởng lợi ngay gần 300 tỉ",
-    "content": "Ông Nguyễn Văn Hậu, chủ tịch Tập đoàn Phúc Sơn, bị cáo buộc đã thâu tóm dự án 1.000 tỉ đồng tại Vĩnh Phúc nhờ vào sự ưu ái của các lãnh đạo địa phương. Sau khi nhận thầu, ông Hậu đã chuyển nhượng và hưởng lợi gần 300 tỉ đồng từ việc thi công dự án. Cơ quan điều tra kết luận rằng ông Hậu và các cựu lãnh đạo tỉnh đã lợi dụng chức vụ để chỉ định thầu trái phép, gây thiệt hại lớn cho ngân sách nhà nước.",
-    "link": "https://tuoitre.vn/thau-tom-du-an-1-000-ti-hau-phao-sang-tay-huong-loi-ngay-gan-300-ti-20250321193601998.htm",
-    "cat": "phap-luat",
-    "positivity": 2,
-    "importance": 8,
-    "question": "Ông Hậu 'Pháo' đã hưởng lợi bao nhiêu từ dự án 1.000 tỉ ở Vĩnh Phúc?",
-    "answers": [
-      {
-        "text": "290 tỉ đồng",
-        "correct": true
-      },
-      {
-        "text": "150 tỉ đồng",
-        "correct": false
-      },
-      {
-        "text": "500 tỉ đồng",
-        "correct": false
-      },
-      {
-        "text": "100 tỉ đồng",
-        "correct": false
-      },
-      {
-        "text": "80 tỉ đồng",
         "correct": false
       }
     ]
