Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Ukraine phát thông báo khẩn liên quan tới tiêm kích F-16",
+    "content": "Không quân Ukraine đã phát đi thông báo khẩn, yêu cầu người dân không đăng tải video về các chuyến bay của tiêm kích F-16 nhằm bảo mật thông tin quân sự. Các quan chức cảnh báo rằng hình ảnh và video về máy bay chiến đấu có thể bị Nga khai thác để thu thập thông tin tình báo, gây nguy hiểm cho các phi công. Ukraine hiện đang nhận được nhiều máy bay F-16 từ các đối tác quốc tế, nhưng vẫn gặp khó khăn trong việc tích hợp và đào tạo phi công cho loại máy bay này.",
+    "link": "https://dantri.com.vn/the-gioi/ukraine-phat-thong-bao-khan-lien-quan-toi-tiem-kich-f-16-20250322200122888.htm",
+    "cat": "the-gioi",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Tại sao Ukraine yêu cầu người dân không đăng tải video về tiêm kích F-16?",
+    "answers": [
+      {
+        "text": "Để bảo mật thông tin quân sự khỏi Nga.",
+        "correct": true
+      },
+      {
+        "text": "Để quảng bá sức mạnh không quân.",
+        "correct": false
+      },
+      {
+        "text": "Để ngăn chặn thông tin về các cuộc tấn công.",
+        "correct": false
+      },
+      {
+        "text": "Để tiết kiệm băng thông internet.",
+        "correct": false
+      },
+      {
+        "text": "Để tránh làm phiền người dân.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Du khách thích thú trải nghiệm làng nghề truyền thống giữa lòng Đà Nẵng",
     "content": "Triển lãm \"Đà Nẵng - Xưa và Nay\" diễn ra từ 22 đến 30-3 tại Đà Nẵng đã thu hút nhiều du khách và người dân tham gia trải nghiệm các nghề thủ công truyền thống. Du khách có cơ hội tự tay làm bánh tráng Túy Loan và dệt chiếu Cẩm Nê, những làng nghề nổi tiếng tại Đà Nẵng. Sự kiện không chỉ giới thiệu các sản phẩm truyền thống mà còn tái hiện lịch sử và văn hóa của thành phố qua các bức ảnh và tư liệu.",
     "link": "https://tuoitre.vn/du-khach-thich-thu-trai-nghiem-lang-nghe-truyen-thong-giua-long-da-nang-20250322192841191.htm",
@@ -2624,6 +2655,33 @@
     ]
   },
   {
+    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
+    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
+    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 5,
+    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
+    "answers": [
+      {
+        "text": "Các số đảo ngược kết quả phép cộng",
+        "correct": true
+      },
+      {
+        "text": "Kết quả là tổng các số bên trái",
+        "correct": false
+      },
+      {
+        "text": "Kết quả là số lớn nhất trong dãy",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần cộng các số lại với nhau",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đặt stent sau bao lâu thì ổn định?",
     "content": "Sau khi đặt stent mạch vành, bệnh nhân thường cần nằm viện từ 2-3 ngày để theo dõi sức khỏe. Thời gian hồi phục có thể khoảng một tuần đối với trường hợp không khẩn cấp, nhưng nếu cần đặt stent ngay lập tức do nhồi máu cơ tim, có thể mất vài tuần đến hơn một tháng để bình phục hoàn toàn. Bệnh nhân cần tuân thủ chế độ dinh dưỡng và tránh hoạt động nặng để hồi phục nhanh chóng.",
     "link": "https://vnexpress.net/dat-stent-sau-bao-lau-thi-on-dinh-4864401.html",
@@ -2650,33 +2708,6 @@
       },
       {
         "text": "3 tháng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
-    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
-    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 5,
-    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
-    "answers": [
-      {
-        "text": "Các số đảo ngược kết quả phép cộng",
-        "correct": true
-      },
-      {
-        "text": "Kết quả là tổng các số bên trái",
-        "correct": false
-      },
-      {
-        "text": "Kết quả là số lớn nhất trong dãy",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần cộng các số lại với nhau",
         "correct": false
       }
     ]
@@ -3621,37 +3652,6 @@
     ]
   },
   {
-    "title": "Xuyên đêm nấu ăn, khiêu vũ cùng người lạ",
-    "content": "Bài viết giới thiệu về một không gian sinh hoạt chung mang tên The Airy Space ở Hà Nội, nơi mà những người trẻ có thể giao lưu, nấu ăn, khiêu vũ và chia sẻ với nhau. Mai Hoa, Triệu Vy và nhiều người khác đã tham gia các hoạt động này, tìm thấy cảm giác an toàn và thân thuộc mặc dù chưa quen biết nhau. Di Trần, người tổ chức, cho biết mục đích là tạo ra một nơi kết nối cho những ai cần giao lưu và giảm áp lực trong cuộc sống. Xu hướng này phản ánh nhu cầu giải tỏa cảm xúc và tìm kiếm sự đồng cảm trong xã hội hiện đại.",
-    "link": "https://vnexpress.net/xuyen-dem-nau-an-khieu-vu-cung-nguoi-la-4863287.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 7,
-    "question": "The Airy Space là nơi tổ chức hoạt động gì cho người trẻ?",
-    "answers": [
-      {
-        "text": "Nấu ăn và khiêu vũ cùng người lạ",
-        "correct": true
-      },
-      {
-        "text": "Chỉ tổ chức các buổi tiệc sinh nhật",
-        "correct": false
-      },
-      {
-        "text": "Chỉ dành cho những người đã quen biết nhau",
-        "correct": false
-      },
-      {
-        "text": "Tổ chức các buổi hội thảo chuyên đề",
-        "correct": false
-      },
-      {
-        "text": "Chỉ dành cho những người lớn tuổi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
     "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
     "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
@@ -3786,6 +3786,37 @@
       },
       {
         "text": "Để thể hiện sự tự tin hơn trong diễn xuất.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Xuyên đêm nấu ăn, khiêu vũ cùng người lạ",
+    "content": "Bài viết giới thiệu về một không gian sinh hoạt chung mang tên The Airy Space ở Hà Nội, nơi mà những người trẻ có thể giao lưu, nấu ăn, khiêu vũ và chia sẻ với nhau. Mai Hoa, Triệu Vy và nhiều người khác đã tham gia các hoạt động này, tìm thấy cảm giác an toàn và thân thuộc mặc dù chưa quen biết nhau. Di Trần, người tổ chức, cho biết mục đích là tạo ra một nơi kết nối cho những ai cần giao lưu và giảm áp lực trong cuộc sống. Xu hướng này phản ánh nhu cầu giải tỏa cảm xúc và tìm kiếm sự đồng cảm trong xã hội hiện đại.",
+    "link": "https://vnexpress.net/xuyen-dem-nau-an-khieu-vu-cung-nguoi-la-4863287.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 7,
+    "question": "The Airy Space là nơi tổ chức hoạt động gì cho người trẻ?",
+    "answers": [
+      {
+        "text": "Nấu ăn và khiêu vũ cùng người lạ",
+        "correct": true
+      },
+      {
+        "text": "Chỉ tổ chức các buổi tiệc sinh nhật",
+        "correct": false
+      },
+      {
+        "text": "Chỉ dành cho những người đã quen biết nhau",
+        "correct": false
+      },
+      {
+        "text": "Tổ chức các buổi hội thảo chuyên đề",
+        "correct": false
+      },
+      {
+        "text": "Chỉ dành cho những người lớn tuổi",
         "correct": false
       }
     ]
