--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Sự thật về hòa hợp tình dục",
+    "content": "Bài viết khám phá sự thật về hòa hợp tình dục trong các mối quan hệ, nhấn mạnh rằng tình yêu không tự động dẫn đến đời sống tình dục thỏa mãn. Nghiên cứu cho thấy sự hòa hợp tình dục là yếu tố thiết yếu để duy trì hạnh phúc trong mối quan hệ, đặc biệt là với phụ nữ, trong khi đàn ông có xu hướng hài lòng hơn nếu bạn đời cảm thấy thỏa mãn. Các chuyên gia khuyến nghị các cặp đôi nên cởi mở thảo luận về nhu cầu và mong muốn của nhau để cải thiện chất lượng tình dục trong mối quan hệ.",
+    "link": "https://vnexpress.net/su-that-ve-hoa-hop-tinh-duc-4864132.html",
+    "cat": "gia-dinh",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Sự hòa hợp tình dục có ảnh hưởng đến mối quan hệ không?",
+    "answers": [
+      {
+        "text": "Có, nó ảnh hưởng đến mức độ hài lòng trong mối quan hệ.",
+        "correct": true
+      },
+      {
+        "text": "Không, tình yêu là đủ để đảm bảo sự thỏa mãn.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ảnh hưởng đến phụ nữ.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần có tình yêu là đủ.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ukraine phát thông báo khẩn liên quan tới tiêm kích F-16",
     "content": "Không quân Ukraine đã phát đi thông báo khẩn, yêu cầu người dân không đăng tải video về các chuyến bay của tiêm kích F-16 nhằm bảo mật thông tin quân sự. Các quan chức cảnh báo rằng hình ảnh và video về máy bay chiến đấu có thể bị Nga khai thác để thu thập thông tin tình báo, gây nguy hiểm cho các phi công. Ukraine hiện đang nhận được nhiều máy bay F-16 từ các đối tác quốc tế, nhưng vẫn gặp khó khăn trong việc tích hợp và đào tạo phi công cho loại máy bay này.",
     "link": "https://dantri.com.vn/the-gioi/ukraine-phat-thong-bao-khan-lien-quan-toi-tiem-kich-f-16-20250322200122888.htm",
@@ -3679,33 +3706,6 @@
     ]
   },
   {
-    "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
-    "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
-    "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Người đóng bảo hiểm 30 năm nghỉ hưu trước tuổi có được hưởng chế độ gì không?",
-    "answers": [
-      {
-        "text": "Có, họ sẽ được hưởng đầy đủ lương hưu và các khoản trợ cấp khác.",
-        "correct": true
-      },
-      {
-        "text": "Không, họ sẽ không được hưởng lương hưu.",
-        "correct": false
-      },
-      {
-        "text": "Họ chỉ được hưởng một phần lương hưu.",
-        "correct": false
-      },
-      {
-        "text": "Họ phải chờ đến tuổi nghỉ hưu mới được hưởng lương hưu.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đo mật độ xương bằng AI trong 30s",
     "content": "Bệnh viện Đại học Y Hà Nội đã ứng dụng công nghệ trí tuệ nhân tạo (AI) để đo mật độ xương chỉ trong 30 giây, giảm thời gian chờ đợi so với 15 phút trước đây. Phương pháp mới này không chỉ tiết kiệm thời gian mà còn nâng cao độ chính xác trong việc phát hiện bệnh loãng xương, một vấn đề ngày càng nghiêm trọng tại Việt Nam. AI trở thành công cụ hỗ trợ quan trọng cho các bác sĩ trong việc chẩn đoán và điều trị, đồng thời giúp giảm chi phí cho người bệnh.",
     "link": "https://vnexpress.net/do-mat-do-xuong-bang-ai-trong-30s-4863001.html",
@@ -3822,6 +3822,33 @@
     ]
   },
   {
+    "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
+    "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
+    "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Người đóng bảo hiểm 30 năm nghỉ hưu trước tuổi có được hưởng chế độ gì không?",
+    "answers": [
+      {
+        "text": "Có, họ sẽ được hưởng đầy đủ lương hưu và các khoản trợ cấp khác.",
+        "correct": true
+      },
+      {
+        "text": "Không, họ sẽ không được hưởng lương hưu.",
+        "correct": false
+      },
+      {
+        "text": "Họ chỉ được hưởng một phần lương hưu.",
+        "correct": false
+      },
+      {
+        "text": "Họ phải chờ đến tuổi nghỉ hưu mới được hưởng lương hưu.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Huyền thoại Tour de France gây thất vọng ở lần đầu chạy half marathon",
     "content": "Mark Cavendish, huyền thoại của Tour de France, đã gây thất vọng khi chỉ đạt thành tích 1 giờ 57 phút 8 giây trong lần đầu tham gia Paris Half Marathon 2025. Mặc dù đây là một thời gian đáng nể cho nhiều vận động viên nghiệp dư, nhưng nhiều người đã chỉ trích anh vì không đạt được thành tích tốt hơn, đặc biệt là khi so sánh với các cựu cua-rơ khác như Thomas Voeckler. Trong khi một số người bảo vệ Cavendish vì đã dám thử sức với môn thể thao mới, những lời chỉ trích vẫn chiếm ưu thế, cho thấy kỳ vọng cao dành cho một vận động viên nổi tiếng như anh.",
     "link": "https://vnexpress.net/huyen-thoai-tour-de-france-gay-that-vong-o-lan-dau-chay-half-marathon-4864354.html",
@@ -3848,33 +3875,6 @@
       },
       {
         "text": "2 giờ 10 phút 15 giây",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Runner nữ ung thư vú, chạy ngực trần",
-    "content": "Louise Bernadette Butcher, một runner nữ đã phẫu thuật cắt bỏ cả hai bên vú do ung thư, đã tham gia chạy ngực trần tại Bath Half Marathon 2025 để nâng cao nhận thức về ung thư vú và gây quỹ từ thiện. Bà đã hoàn thành cự ly 21,0975 km trong thời gian 2 giờ 14 phút 44 giây. Butcher hy vọng rằng hành động của mình sẽ giúp nâng cao sự tự tin của mọi người về cơ thể và khuyến khích những người khác chiến đấu với căn bệnh ung thư.",
-    "link": "https://vnexpress.net/runner-nu-ung-thu-vu-chay-nguc-tran-4864338.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Louise Butcher đã làm gì để nâng cao nhận thức về ung thư vú?",
-    "answers": [
-      {
-        "text": "Chạy ngực trần tại các giải marathon",
-        "correct": true
-      },
-      {
-        "text": "Tham gia các sự kiện thể thao khác",
-        "correct": false
-      },
-      {
-        "text": "Viết sách về hành trình của mình",
-        "correct": false
-      },
-      {
-        "text": "Tổ chức hội thảo về sức khỏe",
         "correct": false
       }
     ]
@@ -3929,6 +3929,33 @@
       },
       {
         "text": "Thiago Silva, Sergio Ramos, Manuel Neuer",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Runner nữ ung thư vú, chạy ngực trần",
+    "content": "Louise Bernadette Butcher, một runner nữ đã phẫu thuật cắt bỏ cả hai bên vú do ung thư, đã tham gia chạy ngực trần tại Bath Half Marathon 2025 để nâng cao nhận thức về ung thư vú và gây quỹ từ thiện. Bà đã hoàn thành cự ly 21,0975 km trong thời gian 2 giờ 14 phút 44 giây. Butcher hy vọng rằng hành động của mình sẽ giúp nâng cao sự tự tin của mọi người về cơ thể và khuyến khích những người khác chiến đấu với căn bệnh ung thư.",
+    "link": "https://vnexpress.net/runner-nu-ung-thu-vu-chay-nguc-tran-4864338.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Louise Butcher đã làm gì để nâng cao nhận thức về ung thư vú?",
+    "answers": [
+      {
+        "text": "Chạy ngực trần tại các giải marathon",
+        "correct": true
+      },
+      {
+        "text": "Tham gia các sự kiện thể thao khác",
+        "correct": false
+      },
+      {
+        "text": "Viết sách về hành trình của mình",
+        "correct": false
+      },
+      {
+        "text": "Tổ chức hội thảo về sức khỏe",
         "correct": false
       }
     ]
@@ -4277,68 +4304,6 @@
       },
       {
         "text": "Doanh nghiệp đa quốc gia",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Trấn Thành bỏ ô tô, đi xe máy đến concert \"Anh trai say hi\" vì sự cố hy hữu",
-    "content": "MC Trấn Thành đã gặp phải sự cố giao thông khi bị kẹt xe suốt 2 tiếng trước khi concert \"Anh trai say hi\" diễn ra. Để kịp giờ tham gia chương trình, anh buộc phải xuống ô tô và chuyển sang di chuyển bằng xe máy. Mặc dù gặp phải tình huống khó khăn, Trấn Thành vẫn kịp có mặt và không làm ảnh hưởng đến chương trình, thu hút sự quan tâm của khán giả qua livestream của mình.",
-    "link": "https://dantri.com.vn/giai-tri/tran-thanh-bo-o-to-di-xe-may-den-concert-anh-trai-say-hi-vi-su-co-hy-huu-20250321205542456.htm",
-    "cat": "giai-tri",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao Trấn Thành phải đi xe máy đến concert \"Anh trai say hi\"?",
-    "answers": [
-      {
-        "text": "Vì bị kẹt xe suốt 2 tiếng",
-        "correct": true
-      },
-      {
-        "text": "Vì xe ô tô hết xăng",
-        "correct": false
-      },
-      {
-        "text": "Vì anh muốn trải nghiệm mới",
-        "correct": false
-      },
-      {
-        "text": "Vì trời mưa lớn",
-        "correct": false
-      },
-      {
-        "text": "Vì không có tài xế",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Rộ tin đồn tỷ phú Elon Musk được tiếp cận kế hoạch liên quan tới Trung Quốc",
-    "content": "Tin tức cho biết tỷ phú Elon Musk có thể được tiếp cận các kế hoạch quân sự tối mật liên quan đến Trung Quốc tại Lầu Năm Góc. Cuộc gặp này nhằm chuẩn bị cho các kịch bản xung đột tiềm tàng với Trung Quốc. Tuy nhiên, chính quyền Trump đã phủ nhận việc thông tin này sẽ được bàn luận trong cuộc họp. Nếu đúng như vậy, vai trò của Musk trong chính quyền Trump sẽ gia tăng, đồng thời nảy sinh lo ngại về xung đột lợi ích do các mối quan hệ kinh doanh của ông.",
-    "link": "https://dantri.com.vn/the-gioi/ro-tin-don-ty-phu-elon-musk-duoc-tiep-can-ke-hoach-lien-quan-toi-trung-quoc-20250321145441555.htm",
-    "cat": "kinh-doanh",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Elon Musk có được tiếp cận kế hoạch quân sự nào liên quan đến Trung Quốc không?",
-    "answers": [
-      {
-        "text": "Có",
-        "correct": true
-      },
-      {
-        "text": "Không",
-        "correct": false
-      },
-      {
-        "text": "Chưa rõ",
-        "correct": false
-      },
-      {
-        "text": "Chỉ là tin đồn",
-        "correct": false
-      },
-      {
-        "text": "Đã bị hủy bỏ",
         "correct": false
       }
     ]
