Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -108,6 +108,33 @@
     ]
   },
   {
+    "title": "Su-34 Nga hạ cánh bằng bụng: Giây phút sinh tử",
+    "content": "Theo thông tin từ kênh Operation Z, một phi hành đoàn của không quân Nga đã thực hiện cú hạ cánh thành công chiếc máy bay Su-34 bằng bụng do trục trặc kỹ thuật khiến bộ càng đáp không bung ra. Sau khi hoàn thành nhiệm vụ, phi công đã quyết định hạ cánh mà không có càng đáp, sử dụng nhiều biện pháp để đảm bảo an toàn cho cả máy bay và bản thân. Cuối cùng, phi công đã giữ cân bằng và hạ cánh an toàn, mặc dù máy bay trượt trên đường băng, tạo ra nhiều tia lửa nhưng không xảy ra cháy nổ.",
+    "link": "https://dantri.com.vn/the-gioi/su-34-nga-ha-canh-bang-bung-giay-phut-sinh-tu-20250322214241381.htm",
+    "cat": "the-gioi",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Cú hạ cánh bằng bụng của Su-34 Nga diễn ra trong hoàn cảnh nào?",
+    "answers": [
+      {
+        "text": "Do bộ càng đáp không bung ra",
+        "correct": true
+      },
+      {
+        "text": "Do thiếu nhiên liệu",
+        "correct": false
+      },
+      {
+        "text": "Do thời tiết xấu",
+        "correct": false
+      },
+      {
+        "text": "Do thiết bị điện tử hỏng hóc",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Sự thật về hòa hợp tình dục",
     "content": "Bài viết khám phá sự thật về hòa hợp tình dục trong các mối quan hệ, nhấn mạnh rằng tình yêu không tự động dẫn đến đời sống tình dục thỏa mãn. Nghiên cứu cho thấy sự hòa hợp tình dục là yếu tố thiết yếu để duy trì hạnh phúc trong mối quan hệ, đặc biệt là với phụ nữ, trong khi đàn ông có xu hướng hài lòng hơn nếu bạn đời cảm thấy thỏa mãn. Các chuyên gia khuyến nghị các cặp đôi nên cởi mở thảo luận về nhu cầu và mong muốn của nhau để cải thiện chất lượng tình dục trong mối quan hệ.",
     "link": "https://vnexpress.net/su-that-ve-hoa-hop-tinh-duc-4864132.html",
@@ -2319,33 +2346,6 @@
     ]
   },
   {
-    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
-    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
-    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 5,
-    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
-    "answers": [
-      {
-        "text": "Các số đảo ngược kết quả phép cộng",
-        "correct": true
-      },
-      {
-        "text": "Kết quả là tổng các số bên trái",
-        "correct": false
-      },
-      {
-        "text": "Kết quả là số lớn nhất trong dãy",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần cộng các số lại với nhau",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đặt stent sau bao lâu thì ổn định?",
     "content": "Sau khi đặt stent mạch vành, bệnh nhân thường cần nằm viện từ 2-3 ngày để theo dõi sức khỏe. Thời gian hồi phục có thể khoảng một tuần đối với trường hợp không khẩn cấp, nhưng nếu cần đặt stent ngay lập tức do nhồi máu cơ tim, có thể mất vài tuần đến hơn một tháng để bình phục hoàn toàn. Bệnh nhân cần tuân thủ chế độ dinh dưỡng và tránh hoạt động nặng để hồi phục nhanh chóng.",
     "link": "https://vnexpress.net/dat-stent-sau-bao-lau-thi-on-dinh-4864401.html",
@@ -2372,6 +2372,33 @@
       },
       {
         "text": "3 tháng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
+    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
+    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 5,
+    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
+    "answers": [
+      {
+        "text": "Các số đảo ngược kết quả phép cộng",
+        "correct": true
+      },
+      {
+        "text": "Kết quả là tổng các số bên trái",
+        "correct": false
+      },
+      {
+        "text": "Kết quả là số lớn nhất trong dãy",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần cộng các số lại với nhau",
         "correct": false
       }
     ]
@@ -3316,6 +3343,33 @@
     ]
   },
   {
+    "title": "\"Sẽ là nói dối, nếu ta nói với trẻ rằng thành công chỉ đến từ sự nỗ lực\"",
+    "content": "Nam diễn viên Anthony Mackie vừa chia sẻ rằng sẽ là sai lầm nếu dạy trẻ em rằng thành công chỉ đến từ sự nỗ lực. Ông nhấn mạnh rằng yếu tố may mắn cũng đóng vai trò quan trọng trong việc đạt được thành công, và nhiều người nổi tiếng đã thừa nhận điều này. Mackie, người đã phải làm việc hơn 10.000 giờ trước khi có cơ hội lớn trong sự nghiệp, cho rằng sự may mắn không thể bị bỏ qua trong bất kỳ hành trình nào hướng tới thành công.",
+    "link": "https://dantri.com.vn/giao-duc/se-la-noi-doi-neu-ta-noi-voi-tre-rang-thanh-cong-chi-den-tu-su-no-luc-20250320211508860.htm",
+    "cat": "giao-duc",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao Anthony Mackie cho rằng may mắn cũng quan trọng trong thành công?",
+    "answers": [
+      {
+        "text": "Vì thành công không chỉ đến từ nỗ lực mà còn do may mắn.",
+        "correct": true
+      },
+      {
+        "text": "Vì nỗ lực là yếu tố duy nhất quyết định thành công.",
+        "correct": false
+      },
+      {
+        "text": "Vì mọi người đều có thể thành công mà không cần nỗ lực.",
+        "correct": false
+      },
+      {
+        "text": "Vì chỉ những người tài năng mới thành công.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
     "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
     "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
@@ -3365,33 +3419,6 @@
       },
       {
         "text": "Giúp tiết kiệm chi phí cho việc phẫu thuật.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "\"Sẽ là nói dối, nếu ta nói với trẻ rằng thành công chỉ đến từ sự nỗ lực\"",
-    "content": "Nam diễn viên Anthony Mackie vừa chia sẻ rằng sẽ là sai lầm nếu dạy trẻ em rằng thành công chỉ đến từ sự nỗ lực. Ông nhấn mạnh rằng yếu tố may mắn cũng đóng vai trò quan trọng trong việc đạt được thành công, và nhiều người nổi tiếng đã thừa nhận điều này. Mackie, người đã phải làm việc hơn 10.000 giờ trước khi có cơ hội lớn trong sự nghiệp, cho rằng sự may mắn không thể bị bỏ qua trong bất kỳ hành trình nào hướng tới thành công.",
-    "link": "https://dantri.com.vn/giao-duc/se-la-noi-doi-neu-ta-noi-voi-tre-rang-thanh-cong-chi-den-tu-su-no-luc-20250320211508860.htm",
-    "cat": "giao-duc",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao Anthony Mackie cho rằng may mắn cũng quan trọng trong thành công?",
-    "answers": [
-      {
-        "text": "Vì thành công không chỉ đến từ nỗ lực mà còn do may mắn.",
-        "correct": true
-      },
-      {
-        "text": "Vì nỗ lực là yếu tố duy nhất quyết định thành công.",
-        "correct": false
-      },
-      {
-        "text": "Vì mọi người đều có thể thành công mà không cần nỗ lực.",
-        "correct": false
-      },
-      {
-        "text": "Vì chỉ những người tài năng mới thành công.",
         "correct": false
       }
     ]
@@ -3517,6 +3544,33 @@
     ]
   },
   {
+    "title": "Runner nữ ung thư vú, chạy ngực trần",
+    "content": "Louise Bernadette Butcher, một runner nữ đã phẫu thuật cắt bỏ cả hai bên vú do ung thư, đã tham gia chạy ngực trần tại Bath Half Marathon 2025 để nâng cao nhận thức về ung thư vú và gây quỹ từ thiện. Bà đã hoàn thành cự ly 21,0975 km trong thời gian 2 giờ 14 phút 44 giây. Butcher hy vọng rằng hành động của mình sẽ giúp nâng cao sự tự tin của mọi người về cơ thể và khuyến khích những người khác chiến đấu với căn bệnh ung thư.",
+    "link": "https://vnexpress.net/runner-nu-ung-thu-vu-chay-nguc-tran-4864338.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Louise Butcher đã làm gì để nâng cao nhận thức về ung thư vú?",
+    "answers": [
+      {
+        "text": "Chạy ngực trần tại các giải marathon",
+        "correct": true
+      },
+      {
+        "text": "Tham gia các sự kiện thể thao khác",
+        "correct": false
+      },
+      {
+        "text": "Viết sách về hành trình của mình",
+        "correct": false
+      },
+      {
+        "text": "Tổ chức hội thảo về sức khỏe",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cơn ác mộng khi uống những liều thuốc trầm cảm đầu tiên",
     "content": "Sau khi uống thuốc chống trầm cảm lần đầu, Nam, 34 tuổi, trải qua cảm giác khó thở và lo lắng cực độ, nghi ngờ về sự an toàn của thuốc. Tình trạng này không phải là cá biệt, nhiều bệnh nhân khác cũng gặp phải triệu chứng tương tự, dẫn đến việc tự ý ngừng thuốc. Theo các chuyên gia, hội chứng serotonin có thể xảy ra ở những người nhạy cảm, và việc không kiên nhẫn trong điều trị có thể làm tình trạng bệnh trở nên nghiêm trọng hơn. Để điều trị hiệu quả, bệnh nhân cần tuân thủ hướng dẫn của bác sĩ và hiểu rõ các triệu chứng có thể xảy ra.",
     "link": "https://vnexpress.net/con-ac-mong-khi-uong-nhung-lieu-thuoc-tram-cam-dau-tien-4863109.html",
@@ -3566,33 +3620,6 @@
       },
       {
         "text": "Thiago Silva, Sergio Ramos, Manuel Neuer",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Runner nữ ung thư vú, chạy ngực trần",
-    "content": "Louise Bernadette Butcher, một runner nữ đã phẫu thuật cắt bỏ cả hai bên vú do ung thư, đã tham gia chạy ngực trần tại Bath Half Marathon 2025 để nâng cao nhận thức về ung thư vú và gây quỹ từ thiện. Bà đã hoàn thành cự ly 21,0975 km trong thời gian 2 giờ 14 phút 44 giây. Butcher hy vọng rằng hành động của mình sẽ giúp nâng cao sự tự tin của mọi người về cơ thể và khuyến khích những người khác chiến đấu với căn bệnh ung thư.",
-    "link": "https://vnexpress.net/runner-nu-ung-thu-vu-chay-nguc-tran-4864338.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Louise Butcher đã làm gì để nâng cao nhận thức về ung thư vú?",
-    "answers": [
-      {
-        "text": "Chạy ngực trần tại các giải marathon",
-        "correct": true
-      },
-      {
-        "text": "Tham gia các sự kiện thể thao khác",
-        "correct": false
-      },
-      {
-        "text": "Viết sách về hành trình của mình",
-        "correct": false
-      },
-      {
-        "text": "Tổ chức hội thảo về sức khỏe",
         "correct": false
       }
     ]
@@ -3860,60 +3887,6 @@
       },
       {
         "text": "Khu công nghiệp điện tử",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Xử phạt người tự nhận là 'Na Tra thái tử' để chữa bệnh",
-    "content": "Nguyễn Văn Kiên, một người đàn ông ở Gia Lai, đã bị xử phạt vì tự nhận mình là \"Na Tra thái tử\" và chữa bệnh bằng những phương pháp mê tín dị đoan. Ông Kiên bị phạt tổng cộng 42,5 triệu đồng, trong đó 35 triệu đồng cho hành vi khám chữa bệnh mà không có chứng chỉ hành nghề. Ông đã cam kết không tái phạm sau khi nộp phạt.",
-    "link": "https://tuoitre.vn/xu-phat-nguoi-tu-nhan-la-na-tra-thai-tu-de-chua-benh-20250321215959873.htm",
-    "cat": "phap-luat",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Nguyễn Văn Kiên bị xử phạt vì lý do gì?",
-    "answers": [
-      {
-        "text": "Tự nhận là 'Na Tra thái tử' để chữa bệnh",
-        "correct": true
-      },
-      {
-        "text": "Chạy xe mà không có bằng lái",
-        "correct": false
-      },
-      {
-        "text": "Bán thuốc không có nguồn gốc",
-        "correct": false
-      },
-      {
-        "text": "Giả mạo giấy tờ trong kinh doanh",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Chính thức giải thể siêu Ủy ban, nơi từng quản lý vốn nhà nước hơn 1,18 triệu tỉ đồng",
-    "content": "Chính phủ Việt Nam đã ban hành Nghị quyết số 58 vào ngày 21-3-2025 chính thức giải thể Ủy ban Quản lý vốn nhà nước tại doanh nghiệp. Quyết định này nhằm chuyển giao các doanh nghiệp thuộc Ủy ban về Bộ Tài chính và các cơ quan liên quan. Mô hình ủy ban đã hoạt động trong nhiều năm nhưng không đạt được hiệu quả kỳ vọng, với một số vấn đề hạn chế trong quản lý. Trước khi giải thể, Ủy ban này quản lý 19 tập đoàn và tổng công ty với tổng vốn chủ sở hữu khoảng 1,18 triệu tỉ đồng.",
-    "link": "https://tuoitre.vn/chinh-thuc-giai-the-sieu-uy-ban-noi-tung-quan-ly-von-nha-nuoc-hon-1-18-trieu-ti-dong-20250321215313758.htm",
-    "cat": "kinh-doanh",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Tại sao Chính phủ quyết định giải thể Ủy ban Quản lý vốn nhà nước tại doanh nghiệp?",
-    "answers": [
-      {
-        "text": "Vì mô hình ủy ban không đạt hiệu quả kỳ vọng",
-        "correct": true
-      },
-      {
-        "text": "Để tăng cường quyền quản lý cho tư nhân",
-        "correct": false
-      },
-      {
-        "text": "Vì không còn cần thiết trong nền kinh tế",
-        "correct": false
-      },
-      {
-        "text": "Để giảm thiểu chi phí hoạt động",
         "correct": false
       }
     ]
